# exohuntr

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  candidates.json  requirements.txt
.github/workflows/: ci.yml
docs/: candidates.json  index.html  validation_results.json
python/: analyze_candidates.py  deep_analysis.py  download_ffi_tesscut.py  download_lightcurves.py  download_new_sectors.py  download_qlp_bulk.py  download_sector_bulk.py  flag_discoveries.py  run_triceratops.py  stack_multisector.py  tls_single.py  toi210_full_sectors.py  validate_candidates.py
results/: DEEP_ANALYSIS.md  REPORT.md  VALIDATION_REPORT.md  crossmatch_results.csv
results/deep_analysis/: toi210_full_secondary.txt  triceratops_TOI_133_01.txt
results/new_sectors/: validation_results.json
results/phase2/: ANALYSIS_LOG.md
scripts/: setup.sh
src/: bls.rs  crossmatch.rs  io.rs  lib.rs  main.rs  validate.rs
tests/: conftest.py  test_analyze_candidates.py  test_download_sector_bulk.py  test_flag_discoveries.py  test_validate_candidates.py
