[package]
name = "exoplanet-hunter"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast BLS transit detection in Rust. Find exoplanets in TESS/Kepler light curves."
license = "MIT"

[[bin]]
name = "hunt"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
ordered-float = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
