[package]
name = "exoplanet-hunter"
version = "0.2.0"
edition = "2021"
description = "Blazing-fast BLS transit detection and validation in Rust. Find exoplanets in TESS/Kepler light curves."
license = "MIT"

[lib]
name = "exoplanet_hunter"
path = "src/lib.rs"

[[bin]]
name = "hunt"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
ordered-float = "4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
